[tool.poetry]
name = "dsp-study"
version = "0.1.0"
description = ""
authors = ["acanois <david.richter42@gmail.com>"]
readme = "README.md"
packages = [{include = "dsp_study"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
audio-dspy = "^0.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
